---
version: 0.07
date:    Tue Aug 10 14:49:21 PDT 2010
changes:
- The Boston.pm release
- Add HAS/OK support.
- Add Not support.
---
version: 0.06
date:    Tue Aug 10 01:56:55 PDT 2010
changes:
- Update Module::Install::TestML
- Remove TestML::CLI and bin/testml
---
version: 0.05
date:    Tue Aug 10 01:45:13 PDT 2010
changes:
- Uses Pegex (moved from Parse::Pegex)
---
version: 0.04
date:    Tue Aug  3 02:50:49 PDT 2010
changes:
- Major update
- Perl6 implementation backports
- New grammar spec
- Uses Parse::Pegex
---
version: 0.03
date:    Sun May 24 09:42:06 PDT 2009
changes:
- Add Catch support
- Tweaks and bug fixes
- Rewrite the runtime and change to the spec requiring $point syntax.
---
version: 0.02
date:    Thu May 21 19:27:50 PDT 2009
changes:
- Complete rewrite.
- Written to spec. http://testml.org/spec/
---
version: 0.01
date:    Thu Apr 23 05:43:45 PDT 2009
changes:
- Initial version.