@@ -42,6 +42,7 @@ sub assert_HAS {
     $self->test_builder->ok($assertion, @label);
 }
 
+use XXX;
 sub assert_OK {
     my $self = shift;
     my $left = shift;
