@@ -1,0 +1,2 @@
+use TestML -run,
+    -document => 'testml/truth.tml';
